# target_factory

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  Copyright.txt  README.md  build.bat  cmake.sh  requirements.txt  setup.py
cmake/: VitisCommon.cmake
expired_targets/: AMD_AIE2_1x4_Overlay.prototxt  DPUCVDX8G_ISA0_B16384C64B1.prototxt  DPUCVDX8G_ISA0_B16384C64B1_DW.prototxt  DPUCVDX8G_ISA0_B4096C16B1_DW_QT.prototxt  DPUCVDX8G_ISA0_B4096C16B3_DW.prototxt  DPUCVDX8G_ISA0_B8192C32B1.prototxt  DPUCVDX8G_ISA0_B8192C32B1_ELP4.prototxt  DPUCVDX8G_ISA0_B8192C32B3.prototxt  DPUCVDX8G_ISA0_B8192C32B3_ALU.prototxt  DPUCVDX8G_ISA0_B8192C32B3_DW.prototxt  DPUCVDX8G_ISA0_B8192C32B3_I4W8B2.prototxt  DPUCVDX8G_ISA0_B8192C32B3_I8W4B2.prototxt  DPUCVDX8G_ISA0_B8192C32B3_I8W8B2.prototxt  DPUCVDX8G_ISA1_C16B1_QT.prototxt  DPUCVDX8G_ISA1_C32B3.prototxt  DPUCVDX8G_ISA2_C32B3.prototxt  DPUCVDX8H_ISA0.prototxt  DPUCVDX8H_ISA0_1STLAYER.prototxt  DPUCVDX8H_ISA0_6PE.prototxt  DPUCZDX8G_ISA0_B1024_MAX.prototxt  DPUCZDX8G_ISA0_B1024_MIN.prototxt  DPUCZDX8G_ISA0_B1152_MAX.prototxt  DPUCZDX8G_ISA0_B1152_MIN.prototxt  DPUCZDX8G_ISA0_B1600_MAX.prototxt  DPUCZDX8G_ISA0_B1600_MIN.prototxt  DPUCZDX8G_ISA0_B2304_MAX.prototxt  DPUCZDX8G_ISA0_B2304_MAX_BG2.prototxt  DPUCZDX8G_ISA0_B2304_MIN.prototxt  DPUCZDX8G_ISA0_B3136_MAX.prototxt  DPUCZDX8G_ISA0_B3136_MAX_BG2.prototxt  DPUCZDX8G_ISA0_B3136_MIN.prototxt  DPUCZDX8G_ISA0_B4096_MAX.prototxt  DPUCZDX8G_ISA0_B4096_MAX_BG2.prototxt  DPUCZDX8G_ISA0_B4096_MAX_EM.prototxt  DPUCZDX8G_ISA0_B4096_MIN.prototxt  DPUCZDX8G_ISA0_B512_MAX.prototxt  DPUCZDX8G_ISA0_B512_MIN.prototxt  DPUCZDX8G_ISA0_B800_MAX.prototxt  DPUCZDX8G_ISA0_B800_MIN.prototxt
include/vitis/ai/: target_factory.hpp
src/: CMakeLists.txt  create_target_DPUCV2DX8G_ISA0.cpp  create_target_DPUCV2DX8G_ISA1.cpp  create_target_DPUCVDX8G_ISA2.cpp  create_target_DPUCVDX8G_ISA3.cpp  create_target_DPUCZDX8G_ISA1.cpp  create_target_v2.cpp  error_code.cpp  matrix_value.py  target.proto  target_factory.cpp  target_list.hpp.cmake  target_list.hpp.in
src/python_api/: wrapper.cpp
targets/: AMD_AIE2P_2x4x1_Overlay.prototxt  AMD_AIE2P_2x4x1_Overlay_CFG1.prototxt  AMD_AIE2P_4x4_Overlay.prototxt  AMD_AIE2P_4x4_Overlay_CFG0.prototxt  AMD_AIE2P_4x4_Overlay_CFG1.prototxt  AMD_AIE2P_4x4_Overlay_CFG2.prototxt  AMD_AIE2P_4x4_Overlay_CFG3.prototxt  AMD_AIE2P_4x4_Overlay_CFG4.prototxt  AMD_AIE2P_8x4x1_Overlay.prototxt  AMD_AIE2P_8x4x1_Overlay_CFG2.prototxt  AMD_AIE2P_Nx4_Overlay.prototxt  AMD_AIE2P_Nx4_Overlay_CFG0.prototxt  AMD_AIE2P_Nx4_Overlay_CFG1.prototxt  AMD_AIE2_4x4_Overlay.prototxt  AMD_AIE2_Nx4_Overlay.prototxt  AutoDPU_4x4x2_Overlay.prototxt  AutoDPU_4x4x2_Overlay_bf16.prototxt  AutoDPU_4x4x2_Overlay_int8.prototxt  DPUCADF8H_ISA0.prototxt  DPUCAHX8H_ISA2.prototxt  DPUCAHX8H_ISA2_DWC.prototxt  DPUCAHX8L_ISA0.prototxt  DPUCAHX8L_ISA0_SP.prototxt  DPUCV2DX8G_ISA1_C10B1.prototxt  DPUCV2DX8G_ISA1_C20B1.prototxt  DPUCV2DX8G_ISA1_C20B14.prototxt  DPUCV3DX8G_ISA0_C16B1.prototxt  DPUCV3DX8G_ISA0_C8SP1.prototxt  DPUCV3DX8G_ISA0_C8SP2.prototxt  DPUCVDX8G_ISA3_C32B1.prototxt  DPUCVDX8G_ISA3_C32B3.prototxt  DPUCVDX8G_ISA3_C32B3_PSMNET.prototxt  DPUCVDX8G_ISA3_C32B6.prototxt  DPUCVDX8G_ISA3_C64B1.prototxt  DPUCVDX8G_ISA3_C64B3.prototxt  DPUCVDX8G_ISA3_C64B5.prototxt  DPUCVDX8H_ISA1_F2W2_8PE.prototxt  DPUCVDX8H_ISA1_F2W4_4PE.prototxt  DPUCVDX8H_ISA1_F2W4_6PE_aieDWC.prototxt  DPUCVDX8H_ISA1_F2W4_6PE_aieMISC.prototxt  (+9 more)
test/: CMakeLists.txt  test_factory.cpp  test_fingerprint.cpp  test_lib_info.cpp
utils/: check_pdi.py
